<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".StudentAdmission">
        <TextView
            android:id="@+id/tv_student"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/student_admission"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/cnf_cla"
            android:fontFamily="@font/poppins_regular"
            android:elevation="10dp"
            />


        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/first_name"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tv_student"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/last_name"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/school"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/school"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/department"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/department"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/school"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/program"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/program"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/department"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/phone"
            android:textSize="24sp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/program"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:hint="@string/age"
            android:textSize="24sp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_bg"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:translationZ="6dp"
            android:layout_marginTop="15dp"
            />


        <android.widget.Button
            android:id="@+id/bv_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age"
            app:layout_constraintVertical_bias="0.253" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>