<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


   <TextView
       android:layout_width="match_parent"
       android:layout_height="130dp"
       android:text="@string/mmust_registration_app"
       android:textSize="28sp"
       android:fontFamily="@font/poppins_regular"
       android:textStyle="bold"
       android:gravity="center"
       android:background="@color/cnf_cla"
       app:layout_constraintTop_toTopOf="parent"
       android:textColor="@color/white"
       android:id="@+id/tv_mmust"
       />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/cnf_cla"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_mmust"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        />

    <android.widget.Button
        android:id="@+id/bv_get_started"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/get_started"
        android:textSize="24sp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>