<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails">
    <TextView
        android:id="@+id/tv_student"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="Student Details"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:elevation="10dp"
        />
    <EditText
        android:id="@+id/ev_search"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:hint="Enter phone number......."
        android:textSize="24sp"
        android:background="@drawable/edit_bg"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        android:elevation="4dp"
        android:translationZ="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_first_name"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ev_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"

        />

    <TextView
        android:id="@+id/tv_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_school"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tv_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnf_department"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_school"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confrm_prg"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_department"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_program"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />
    <android.widget.Button
        android:id="@+id/bv_register"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/cancel_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#05AE05"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bv_search"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- Confirm Button -->
    <android.widget.Button
        android:textAllCaps="false"
        android:id="@+id/bv_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Search"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toEndOf="@id/bv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>